--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-react-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jirengu-inc.github.io/project-react-1/build/",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
